Solved #43 - Incorrect table row alignment

--- a/assets/default/sass/style.scss
+++ b/assets/default/sass/style.scss
@@ -169,7 +169,7 @@
         }
 
         td {
-            vertical-align: middle;
+            vertical-align: middle !important;
         }
 
         th:first-child,
